--- a/me/index.html
+++ b/me/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="/assets/css/atom-one-light.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/styles.css">	
     
-        <title>404...</title>
+        <title>me</title>
     
 	<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
@@ -74,7 +74,7 @@
         <div class="content">
 			<div class="post_title">
 				<img src="/assets/img/file.png" />
-				<h1>404...</h1>
+				<h1>me</h1>
 				<a href="/"><div class="btn"><span class="fa fa-times"></span></div></a>
 				<div class="btn btn_max"><span class="fa fa-window-maximize"></span></div>
 				<div class="btn"><span class="fa fa-window-minimize"></span></div>
@@ -83,7 +83,7 @@
 				<li></li>
 			</ul>
 			<div class="post_content">
-        		<p>Sorry this page does not exist... :(</p>
+        		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lobortis placerat enim nec cursus. Ut et elit congue, facilisis dui id, efficitur velit. Integer faucibus velit varius arcu consectetur aliquam. Sed dui ante, euismod non malesuada vel, suscipit vel elit. Nullam tempor vehicula urna, sed dignissim ligula hendrerit in. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin et nisi eget nunc vehicula posuere. Nam elementum finibus auctor. Suspendisse a mauris et arcu molestie egestas sed et dolor. Nullam ut est tristique, iaculis tortor non, viverra felis. Praesent a tincidunt tellus, eget congue eros. Mauris non libero nec ipsum ultricies tincidunt sit amet nec ante. Duis molestie sem at ligula rhoncus viverra. Pellentesque sit amet tortor euismod, rhoncus lacus a, sodales odio. Proin ac convallis ipsum. Cras tincidunt mollis consequat.</p>
 
 			</div>
 		</div>
